<resources>
    <string name="app_name">FindFood</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="action_about">关于</string>
    <string name="action_out">登出</string>
    <string name="title_activity_item_detail">ItemDetailActivity</string>
    <string name="title_activity_maps">Map</string>

    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="title_activity_gdmap">GDMapActivity</string>d
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_username">用户名</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="error_invalid_email">无效的邮箱</string>
    <string name="error_invalid_password">密码长度不小于4位</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">不能为空</string>
    <string name="forget_password"><u>忘记密码</u></string>
    <string name="have_not_register"><u>还未注册</u></string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>

    <!--nav_header-->
    <string name="default_name"><u>未登录</u></string>
    <string name="default_mood"></string>
    <string name="button_allow">允许</string>
    <string name="button_deny">拒绝</string>
    <string name="permission_camera_never_askagain">不再提示相机权限</string>
    <string name="permission_camera_denied">拒绝相机权限</string>
    <string name="permission_camera_rationale">相机权限提示</string>
    <string name="permission_contacts_rationale">通讯录权限提示</string>
    <string name="loading">正在加载</string>
    <string name="exit_once_more">再按一次退出程序</string>
    <string name="action_search">action_search</string>
    <string name="search_hint">请输入搜索关键词</string>
    <string name="submit_order">提交预约</string>
    <string name="order_time">预约时间</string>
    <string name="dialog_hint">提示</string>
    <string name="to_login">清先登录！</string>
    <string name="OK">确定</string>
    <string name="order_id">订单号：%s</string>
    <string name="order_amount">消费：%s</string>
    <string name="order_actual_amount">实付：%s</string>
    <string name="order_completed">已完成</string>
    <string name="order_to_pay">待支付</string>
    <string name="order_to_comment">待评价</string>
    <string name="pay_hint">请询问服务员输入消费金额</string>
    <string name="yuan">%s 元</string>
    <string name="per_yuan">￥%s/人</string>
    <string name="comment_hint">在这里写下评论...</string>
    <string name="action_save">提交</string>
    <string name="uncomplete_order">未完成订单</string>
    <string name="complete_order">已完成</string>
    <string name="bmob_key">8bb928ff8b09ee63a01e4c72a3090825</string>
</resources>
